syntax = "proto3";

package emissions.module.v1;

import "cosmos/app/v1alpha1/module.proto";

// Module is the app config object of the module.
// Learn more: https://docs.cosmos.network/main/building-modules/depinject
message Module {
  option (cosmos.app.v1alpha1.module) = {go_import: "github.com/allora-network/allora-chain/x/emissions"};

  string fee_collector_name = 1;
}
