syntax = "proto3";
package emissions.v1;

option go_package = "github.com/allora-network/allora-chain/x/emissions/types";

message OffchainNode {
  string node_address = 1;
  string owner = 2;
}